--- a/src/app/modules/login/components/login/login.component.html
+++ b/src/app/modules/login/components/login/login.component.html
@@ -1,13 +1,23 @@
-<div>
-    <div>
-        <form>
-            <input placeholder="email" name="email" (change)="handleInputChange($event)" />
-            <input placeholder="password" name="password" (change)="handleInputChange($event)" />
-        </form>
-        <button (click)="handleLogin();">Login</button>
-    </div>
-
-    <div>
-        <h1>User Token: {{token}} </h1>
-    </div>
-</div>
+<mat-card>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="handleLogin()">
+        <h2>Log In</h2>
+        <mat-error *ngIf="loginInvalid">
+          The username and password were not recognised
+        </mat-error>
+        <mat-form-field class="full-width-input">
+          <input matInput placeholder="Email" formControlName="email" required>
+          <mat-error>
+            Please provide a valid email address
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <input matInput type="password" placeholder="Password" formControlName="password" required>
+          <mat-error>
+            Please provide a valid password
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary">Login</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
